cmake_minimum_required(VERSION 3.16)
project(Algorithm_4th CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_executable(main main.cpp)
target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(01_01_01 exercise/01_01_01.cpp)
add_executable(01_01_02 exercise/01_01_02.cpp)
add_executable(01_01_03 exercise/01_01_03.cpp)
add_executable(01_01_04 exercise/01_01_04.cpp)
add_executable(01_01_05 exercise/01_01_05.cpp)
