cmake_minimum_required(VERSION 3.16)
project(Algorithm_4th CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/library)

add_executable(main main.cpp)
add_executable(01_01_01 exercise/01_01_01.cpp)
add_executable(01_01_02 exercise/01_01_02.cpp)
add_executable(01_01_03 exercise/01_01_03.cpp)
add_executable(01_01_04 exercise/01_01_04.cpp)
add_executable(01_01_05 exercise/01_01_05.cpp)
add_executable(01_01_06 exercise/01_01_06.cpp)
add_executable(01_01_07 exercise/01_01_07.cpp)
add_executable(01_01_08 exercise/01_01_08.cpp)
add_executable(01_01_09 exercise/01_01_09.cpp)
add_executable(01_01_10 exercise/01_01_10.cpp)
add_executable(01_01_11 exercise/01_01_11.cpp)
add_executable(01_01_12 exercise/01_01_12.cpp)
add_executable(01_01_13 exercise/01_01_13.cpp)
add_executable(01_01_14 exercise/01_01_14.cpp)
add_executable(01_01_15 exercise/01_01_15.cpp)
add_executable(01_01_16 exercise/01_01_16.cpp)
add_executable(01_01_17 exercise/01_01_17.cpp)
add_executable(01_01_18 exercise/01_01_18.cpp)
add_executable(01_01_19 exercise/01_01_19.cpp)
add_executable(01_01_20 exercise/01_01_20.cpp)
add_executable(01_01_21 exercise/01_01_21.cpp)
